# conidie

./: script_test.py  setup.cfg
conidie/: _script.py  napari.yaml  path.py
conidie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
conidie/.ipynb_checkpoints/: napari plugin-checkpoint.ipynb
