[metadata]
name = conidie
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here
install_requires =
    napari
    scikit-image

[options.entry_points]
napari.manifest =
    conidie = conidie:napari.yaml

[options.package_data]
* = *.yaml